force-app/main/Home/objects/Conversation_Participant__c/Conversation_Participant__c.object-meta.xml
<CustomObject>
    <label>Conversation Participant</label>
    <pluralLabel>Conversation Participants</pluralLabel>
    <nameField>
        <label>Participant Name</label>
        <type>AutoNumber</type>
        <displayFormat>CP-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel> <!-- Because Conversation__c is Master-Detail -->
    <description>Links Users to a Conversation thread.</description>
<!-- May be useful for reporting -->
<!-- Controlled by parent -->
</CustomObject> 