force-app/main/Home/objects/Conversation_Participant__c/fields/Last_Read_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Read_Timestamp__c</fullName>
    <label>Last Read Timestamp</label>
    <type>DateTime</type>
</CustomField> 