force-app/main/Home/objects/Conversation_Participant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint> <!-- Or restrict if preferred -->
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Conversation Participants</relationshipLabel>
    <relationshipName>Conversation_Participants</relationshipName>
<!-- Set to true if a participant MUST be a User -->
    <type>Lookup</type>
</CustomField> 